--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
           in modern web development.
         </p>
         <div class="image">
-          <video width="100%" loop autoplay>
+          <video width="100%" controls loop autoplay>
             <source src="/src/img/threejsWorksVideo.mp4" type="video/mp4" />
             Your browser does not support the video tag.
           </video>
@@ -272,7 +272,7 @@
           transitions and user engagement.
         </p>
         <div class="image">
-          <video width="100%" loop autoplay>
+          <video width="100%" controls loop autoplay>
             <source src="/src/img/CyberFictionEdited.mp4" type="video/mp4" />
             Your browser does not support the video tag.
           </video>
