--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
           </a>
         </p>
         <form
-          action="https://formsubmit.co/kunaltyagi00000@gmail.com"
+          action="https://getform.io/f/bxookdqa"
           method="POST"
           onsubmit="handleClick(event)"
           style="
