--- a/index.html
+++ b/index.html
@@ -289,7 +289,8 @@
           </a>
         </p>
         <form
-          action="https://getform.io/f/bxookdqa"
+          action="mailto:kunaltyagi00000@gmail.com"
+          enctype="text/plain"
           method="POST"
           onsubmit="handleClick(event)"
           style="
